# github-tutorial-repo

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/simple_calculator/: __about__.py  calculator.py
tests/: __init__.py  test_calculator.py
