[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-calculator"
dynamic = ["version"]
description = 'This is a simple demo calculator to learn Git and Github'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Mark Janse", email = "mark.janse@health-ri.nl" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/simple-calculator#readme"
Issues = "https://github.com/unknown/simple-calculator/issues"
Source = "https://github.com/unknown/simple-calculator"

[project.entry-points]
"calculator" = { calculator = "simple_calculator.calculator:main" }


[project.scripts]
calculator = "simple_calculator.calculator:main"

[tool.hatch.version]
path = "src/simple_calculator/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/simple_calculator tests}"

[tool.coverage.run]
source_pkgs = ["simple_calculator", "tests"]
branch = true
parallel = true
omit = ["src/simple_calculator/__about__.py"]

[tool.coverage.paths]
simple_calculator = [
  "src/simple_calculator",
  "*/simple-calculator/src/simple_calculator",
]
tests = ["tests", "*/simple-calculator/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
